             # aptitude install ssh-server^:armel

           This avoids ambiguity that may arise when a task and
           package have the same name.

- Minor bugs:

  * [all]: Changelog downloading is restored
           (Closes: #669569, LP: #824708)

  * [cmdline]: Exit with non-zero status when a package run is
               aborted. (Closes: #293008)

- Cosmetic and UI bugs:

  * [curses]: Adjust default widths of localized columns:
              broken_count, downloadsize (Closes: #674045)

  * [all]: Fold some near-duplicate strings

  * [curses]: Update package views after 'Cancel pending actions'
              (Closes: #595753)

- Build system changes:

  * Remove redundancy in doc build system

    Lots of code was duplicated between makefiles for the
    various translations.  Much of this is now in common
    rules files making it easier to add new translations.

- Documentation:

  * [doc]: Add doctype headers to html docs.
  * Italian translation (Closes: #674664)
  * Fix minor errors in documentation. Thanks to Beatrice Torracca
    (Closes: #674675)

- Translation updates:

  * French (Closes: #673827, LP: #642840)
  * German (Closes: #672467)
  * Simplified Chinese

[5/2/2012]
Version 0.6.7                               "I said 'Step pause turn
                                             pause pivot step step'"

- Crashes and serious errors:

  * [cmdline]: Avoid dpkg and infinite loop in download-only mode
               (Closes: #629266) (LP: #975793)

  * [cmdline]: Check for apt_init errors in cmdline_download.cc
               (Closes: #670379)

- Minor bugs:

  * [all]: Fix various locking issues:

           - 'install' actions lock /var/cache/apt/archives

             Other tasks which access that directory (such as 'apt-get
             clean') will now fail if aptitude is downloading or
             installing packages. (Closes: #370381)

  * [all]: Actually use aptitude::Logging::Levels (Closes: #654344)

- Internal changes:
